--- a/CarRacing/CarRacing/Properties/Resources.resx
+++ b/CarRacing/CarRacing/Properties/Resources.resx
@@ -148,4 +148,7 @@
   <data name="gameover1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\gameover1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="hit" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\hit.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
 </root>
